# fjy

./: .gitignore  start_kimi_stack.ps1  start_kimi_stack.sh
OntoGit/: ontogit_tools.py  (+2 more)
Ontology_Factory/aft/aft-main/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Ontology_Factory/aft/aft-main/.github/workflows/: ci.yml
Ontology_Factory/aft/aft-main/examples/code/: ontology.yaml  request.yaml
Ontology_Factory/aft/aft-main/examples/code/src/: broken_payment.py
Ontology_Factory/aft/aft-main/examples/docs/: request.yaml  requirements.md
Ontology_Factory/aft/aft-main/examples/hitl/: ontology.yaml  request.yaml  response.yaml
Ontology_Factory/aft/aft-main/examples/hitl/src/: ambiguous_payment.py
Ontology_Factory/aft/aft-main/examples/minimal/: ontology.yaml  request.yaml
Ontology_Factory/aft/aft-main/examples/minimal/docs/: requirements.md
Ontology_Factory/aft/aft-main/examples/minimal/src/: billing.py
Ontology_Factory/aft/aft-main/frontend/: package-lock.json  package.json
Ontology_Factory/aft/aft-main/frontend/src/: App.tsx  index.css  main.tsx
Ontology_Factory/aft/aft-main/frontend/src/components/: CitationDetailsDialog.tsx  CitationInspector.tsx  CommandPalette.tsx  ConversationSidebar.tsx  FindingsPanel.tsx  GitHubReviewDialog.tsx  GitHubReviewResultCard.tsx  GraphViewer.tsx  IngestionPanel.tsx  Layout.tsx  QAResponsePanel.tsx  mode-toggle.tsx
Ontology_Factory/aft/aft-main/frontend/src/components/ui/: alert.tsx
Ontology_Factory/aft/aft-main/frontend/src/lib/: api.ts  qa.ts
Ontology_Factory/aft/aft-main/ontology_audit_hub/: __init__.py
Ontology_Factory/aft/aft-main/scripts/: start-all.ps1  stop-live-backends.ps1
Ontology_Factory/aft/aft-main/src/ontology_audit_hub/: __init__.py  _cli_support.py  api.py  cli.py  github_review_service.py  knowledge_service.py  qa_cli.py  qa_service.py  review_cli.py  service.py
Ontology_Factory/aft/aft-main/src/ontology_audit_hub/domain/audit/: __init__.py  models.py  severity.py
Ontology_Factory/aft/aft-main/src/ontology_audit_hub/domain/code/: __init__.py  detector.py  inference.py  models.py  parser.py
Ontology_Factory/aft/aft-main/src/ontology_audit_hub/graphs/: __init__.py  github_review_graph.py  github_review_state.py  qa_graph.py  qa_state.py  state.py  supervisor.py
Ontology_Factory/aft/aft-main/src/ontology_audit_hub/infra/: checkpointing.py  embeddings.py  github_snapshot.py  graph_augmenter.py  human_store.py  lexical_index.py  qa_sources.py  retrieval.py  runtime.py  settings.py
Ontology_Factory/aft/aft-main/tests/integration/: test_api.py  test_cli.py  test_code_audit_graph.py  test_dev_bootstrap.py  test_document_audit_graph.py  test_github_review_api.py  test_graph_augmenter_flow.py  test_knowledge_api.py  test_neo4j_live.py  test_qa_api.py  test_qa_cli.py  test_qdrant_live.py  test_resume_flow.py  test_review_cli.py  test_supervisor_graph.py
Ontology_Factory/aft/aft-main/tests/support/: document_samples.py
Ontology_Factory/aft/aft-main/tests/unit/: test_code_detector.py  test_code_parser.py  test_doc_chunking.py  test_doc_conflicts.py  test_document_extractors.py  test_embeddings.py  test_github_review_adapter.py  test_github_review_fast_path.py  test_github_review_graph.py  test_github_snapshot.py  test_graph_augmenter.py  test_intent_router.py  test_knowledge_upload.py  test_llm_hooks.py  test_models.py  test_ontology_loader.py  test_pydantic_ai_adapter.py  test_retriever.py  test_runtime_config.py  test_testspec_generator.py  test_validators.py
Ontology_Factory/dls/: .gitignore  DESIGN.md  LICENSE  README.md  demo.html  function_overview.md  pyproject.toml
Ontology_Factory/dls/config/: ontology_negotiator.env.toml  ontology_negotiator.toml.example
Ontology_Factory/dls/scripts/: run_fishhome_negotiation.py
Ontology_Factory/dls/src/ontology_negotiator/: __init__.py  agents.py  artifacts.py  benchmark.py  cli.py  config.py  errors.py  evaluator.py  graph_builder.py  models.py  negotiator.py  prompts.py  text_graph_pipeline.py  vault.py
Ontology_Factory/dls/src/ontology_negotiator/rules/: arbiter_system.txt  critic_system.txt  evaluator_system.txt  proposer_system.txt
Ontology_Factory/dls/tests/: fish_home.txt  test.txt  test_agent_json_parsing.py  test_evidence_vault_regressions.py  test_llm_retry.py
Ontology_Factory/evolution/: README.md  pyproject.toml
Ontology_Factory/evolution/src/evolution/: __init__.py  engine.py  models.py
Ontology_Factory/evolution/tests/: test_evolution_engine.py
Ontology_Factory/ner/: README.md  pyproject.toml
Ontology_Factory/ner/src/ner/: __init__.py  cli.py  extractor.py  llm.py  schema.py
Ontology_Factory/ner/src/ner/providers/: __init__.py  base.py  hanlp_provider.py
Ontology_Factory/ner/tests/: test_ner_extractor.py
Ontology_Factory/ontology_core/: README.md  pyproject.toml
Ontology_Factory/ontology_core/src/ontology_core/: __init__.py  cli.py  models.py  reconciler.py
Ontology_Factory/ontology_core/tests/: test_ontology_core_reconciler.py
Ontology_Factory/pipeline/: README.md  config.example.yaml  config.local_wiki_verify.yaml  pyproject.toml
Ontology_Factory/pipeline/src/pipeline/: __init__.py  adapters.py  bootstrap.py  cli.py  config.py  runner.py  store.py
Ontology_Factory/pipeline/tests/: test_pipeline_adapters.py  test_pipeline_runner.py  test_pipeline_wiki_runner.py
Ontology_Factory/relation/: README.md  pyproject.toml
Ontology_Factory/relation/src/entity_relation/: __init__.py  cli.py  extractor.py  schema.py
Ontology_Factory/relation/tests/: test_relation_extractor.py
Ontology_Factory/storage/: README.md  pyproject.toml
Ontology_Factory/storage/src/ontology_store/: __init__.py  cli.py  models.py  store.py
Ontology_Factory/storage/tests/: test_cli_tools.py  test_storage_store.py  test_storage_wiki_store.py
Ontology_Factory/xiaogugit/: 1.md  README.md  __init__.py  cli.py  frontend.html  frontend_modern.html  frontend_visual.html  frontend_visual_modern.html  manager.py  pyproject.toml  server.py
Ontology_Factory/xiaogugit/tests/: test_cli.py
(+1498 files in other folders)
